[package]
name          = "videocore"
version       = "0.1.0"
authors       = ["Sean Kerr <sean@code-box.org>"]
license       = "Apache-2.0"
description   = "Rust bindings for Broadcom's VideoCore API"
homepage      = "https://github.com/seankerr/rust-videocore"
repository    = "https://github.com/seankerr/rust-videocore"
readme        = "README.md"
keywords      = ["bcm", "broadcom", "raspberry", "raspberrypi", "rpi", "videocore"]
exclude       = [".gitignore"]

[dependencies]
libc = "0.1.10"