[package]
name          = "videocore"
version       = "0.1.3"
authors       = ["Sean Kerr <sean@metatomic.io>"]
license       = "Apache-2.0"
description   = "Rust bindings for Broadcom's VideoCore API"
homepage      = "https://github.com/seankerr/rust-videocore"
repository    = "https://github.com/seankerr/rust-videocore"
readme        = "README.md"
keywords      = ["bcm", "broadcom", "raspberrypi", "rpi", "videocore"]
exclude       = [".gitignore"]

[dependencies]
libc = "0.1.10"
